--- a/docs/integrations/prefect-dbt/index.mdx
+++ b/docs/integrations/prefect-dbt/index.mdx
@@ -69,7 +69,7 @@ run_dbt_job_flow()
 
 ### Save dbt Cloud credentials to a block
 
-Blocks can be [created through code](/3.0rc/develop/connect-third-party/#saving-blocks) or through the UI.
+Blocks can be [created through code](/3.0rc/develop/blocks/#saving-blocks) or through the UI.
 
 
 To create a dbt Cloud Credentials block:
