--- a/docs/integrations/prefect-ray/index.mdx
+++ b/docs/integrations/prefect-ray/index.mdx
@@ -26,7 +26,7 @@ See the [Ray installation documentation](https://docs.ray.io/en/latest/ray-overv
 
 ## Run tasks on Ray
 
-The `RayTaskRunner` is a [Prefect task runner](https://docs.prefect.io/develop/write-tasks/task-runners/) that submits tasks to [Ray](https://www.ray.io/) for parallel execution.
+The `RayTaskRunner` is a [Prefect task runner](https://docs.prefect.io/develop/task-runners/) that submits tasks to [Ray](https://www.ray.io/) for parallel execution.
 By default, a temporary Ray instance is created for the duration of the flow run.
 For example, this flow counts to three in parallel:
 
@@ -114,7 +114,7 @@ To resolve these issues, we recommend taking the following steps when working wi
 
 1. By default, Prefect will not persist any data to the filesystem of the remote ray worker. However, if you want to take advantage of Prefect's caching ability, you will need to configure a remote result storage to persist results across task runs.
 
-We recommend using the [Prefect UI to configure a storage block](https://docs.prefect.io/develop/connect-third-party/) to use for remote results storage.
+We recommend using the [Prefect UI to configure a storage block](https://docs.prefect.io/develop/blocks/) to use for remote results storage.
 
 Here's an example of a flow that uses caching and remote result storage:
 
