--- a/docs/3.0rc/develop/inputs.mdx
+++ b/docs/3.0rc/develop/inputs.mdx
@@ -484,7 +484,7 @@ async def sender():
 
 An iterator helps keep track of the inputs your flow has already received. If you want your flow to suspend and then resume later, 
 save the keys of the inputs you've seen so the flow can read them back out when it resumes. 
-Consider using a [block](/3.0rc/develop/connect-third-party/), such as a `JSONBlock`.
+Consider using a [block](/3.0rc/develop/blocks/), such as a `JSONBlock`.
 
 The following flow receives input for 30 seconds then suspends itself, which exits the flow and tears down infrastructure:
 
