--- a/docs/3.0rc/get-started/index.mdx
+++ b/docs/3.0rc/get-started/index.mdx
@@ -11,12 +11,12 @@ It's the easiest way to transform any Python function into a unit of work that c
 With Prefect you gain:
 
 * [Scheduling](/3.0rc/automate/add-schedules)
-* [Retries](/3.0rc/develop/write-tasks/index#task-arguments)
-* [Logging](/3.0rc/develop/observe-workflows/logging/) 
-* [Convenient async functionality](/3.0rc/develop/write-tasks/task-runners/#task-runners)
-* [Caching](/3.0rc/develop/write-tasks/index#caching)
+* [Retries](/3.0rc/develop/write-tasks#task-arguments)
+* [Logging](/3.0rc/develop/logging/) 
+* [Convenient async functionality](/3.0rc/develop/task-runners/#task-runners)
+* [Caching](/3.0rc/develop/write-tasks#caching)
 * [Notifications](/3.0rc/automate/events/automations-triggers/)
-* [Observability](/3.0rc/develop/observe-workflows/index/)
+* [Observability](/3.0rc/develop/runtime-context/)
 * [Event-based orchestration](/3.0rc/automate/events/webhook-triggers)
 
 ![screenshot of Prefect Cloud dashboard](/3.0rc/img/ui/cloud-dashboard.png)
