--- a/docs/3.0rc/get-started/quickstart.mdx
+++ b/docs/3.0rc/get-started/quickstart.mdx
@@ -251,8 +251,8 @@ Deployments elevate flows to remotely configurable entities that have their own 
 You've seen how to move from a Python script to a scheduled, observable, remotely orchestrated workflow with Prefect.
 Now considering reading: 
 
-* [Write flows](/3.0rc/develop/write-flows/index)
-* [Write tasks](/3.0rc/develop/write-tasks/index)
+* [Write flows](/3.0rc/develop/write-flows)
+* [Write tasks](/3.0rc/develop/write-tasks)
 * [Self-host](/3.0rc/manage/self-host) your Prefect server
 
 <Tip>
