--- a/docs/3.0rc/manage/cloud/index.mdx
+++ b/docs/3.0rc/manage/cloud/index.mdx
@@ -46,7 +46,7 @@ A workspace is an isolated environment within Prefect Cloud for all Prefect acti
 - [Flows](/3.0rc/develop/write-flows/) associated with flow runs and deployments observed by the Prefect Cloud API
 - [Deployments](/3.0rc/deploy/serve-flows/)
 - [Work pools](/3.0rc/deploy/work-pools/control-runs/)
-- [Blocks](/3.0rc/develop/connect-third-party/)
+- [Blocks](/3.0rc/develop/blocks/)
 - [Events](/3.0rc/automate/events/)
 - [Automations](/3.0rc/automate/events/automations-triggers/)
 - [Incidents](/3.0rc/automate/events/events/)
