--- a/docs/integrations/prefect-dask/index.mdx
+++ b/docs/integrations/prefect-dask/index.mdx
@@ -8,9 +8,20 @@ The `prefect-dask` integration makes it easy to accelerate your flow runs with D
 
 To install `prefect-dask`, run:
 
-```bash
-pip install -U prefect-dask
-```
+Install or update to the latest version of the prefect-dask library and dependencies.
+
+<Tabs>
+    <Tab title="Prefect 2">
+    ```bash
+    pip install -U prefect-dask
+    ```
+    </Tab>
+    <Tab title="Prefect 3">
+    ```bash
+    pip install -U -pre prefect-dask
+    ```
+    </Tab>
+</Tabs>
 
 ## Why use Dask?
 
