--- a/docs/2.19.x/concepts/states.mdx
+++ b/docs/2.19.x/concepts/states.mdx
@@ -183,7 +183,7 @@ The final state of a flow is determined by its return value. The following rules
 
 *   If an exception is raised directly in the flow function, the flow run is marked as `FAILED`.
 *   If the flow does not return a value (or returns `None`), its state is determined by the states of all of the runs within it.
-*   If _any_ task run or nested flow run failed and none were cancelled, then the final flow run state is marked as `FAILED`.
+*   If _any_ run failed and none were cancelled, then the final flow run state is marked as `FAILED`.
 *   If _any_ run was cancelled, then the final flow run state is marked as `CANCELLED`.
 *   If a flow returns a manually created state, it is used as the state of the final flow run. This allows for manual determination of final state.
 *   If the flow run returns _any other object_, then it is marked as successfully completed.
