--- a/docs/2.19.x/concepts/task-runners.mdx
+++ b/docs/2.19.x/concepts/task-runners.mdx
@@ -163,7 +163,7 @@ This script outputs the following logs demonstrating the use of the Dask task ru
 20:14:29.881 | INFO    | Flow run 'ivory-caiman' - Executing 'hello_local-7633879f-0' immediately...
 Hello!
 20:14:29.904 | INFO    | Task run 'hello_local-7633879f-0' - Finished in state Completed()
-20:14:29.952 | INFO    | Flow run 'ivory-caiman' - Created nested flow run 'nimble-sparrow' for flow 'dask-nested flow'
+20:14:29.952 | INFO    | Flow run 'ivory-caiman' - Created subflow run 'nimble-sparrow' for flow 'dask-nested flow'
 20:14:29.953 | INFO    | prefect.task_runner.dask - Creating a new Dask cluster with `distributed.deploy.local.LocalCluster`
 20:14:31.862 | INFO    | prefect.task_runner.dask - The Dask dashboard is available at http://127.0.0.1:8787/status
 20:14:31.901 | INFO    | Flow run 'nimble-sparrow' - Created task run 'hello_dask-2b96d711-0' for task 'hello_dask'
