--- a/docs/2.19.x/concepts/tasks.mdx
+++ b/docs/2.19.x/concepts/tasks.mdx
@@ -1,6 +1,6 @@
 ---
 title: Tasks
-description: A task is a function that represents a discrete unit of work in a Prefect workflow. Tasks are not required — you may define Prefect workflows that consist only of flows, using regular Python statements and functions. Tasks enable you to encapsulate elements of your workflow logic in observable units that can be reused across flows and nested flows.
+description: A task is a function that represents a discrete unit of work in a Prefect workflow. Tasks are not required — you may define Prefect workflows that consist only of flows, using regular Python statements and functions. Tasks enable you to encapsulate elements of your workflow logic in observable units that can be reused across flows.
 ---
 
 
