--- a/docs/2.19.x/concepts/states.mdx
+++ b/docs/2.19.x/concepts/states.mdx
@@ -99,7 +99,7 @@ def nested_flow():
 
 @flow 
 def my_flow():
-    result = nested flow() # return data
+    result = nested_flow() # return data
 
 ```
 
