--- a/docs/3.0rc/get-started/index.mdx
+++ b/docs/3.0rc/get-started/index.mdx
@@ -1,7 +1,7 @@
 ---
 title: Welcome to Prefect
 description: Get started with Prefect, the easiest way to orchestrate and observe your data pipelines
-# TODO Figure out how to do this: hide_table_of_contents: true
+mode: wide
 ---
 
 Prefect is a workflow orchestration tool empowering developers to build, observe, and react to data pipelines.
