Put the sub-header in the description

--- a/docs/3.0rc/get-started/index.mdx
+++ b/docs/3.0rc/get-started/index.mdx
@@ -1,10 +1,8 @@
 ---
 title: Welcome to Prefect
-description: Get started with Prefect, the easiest way to orchestrate and observe your data pipelines
+description: Prefect is a workflow orchestration tool that empowers developers to build, observe, and react to data pipelines.
 mode: wide
 ---
-
-Prefect is a workflow orchestration tool empowering developers to build, observe, and react to data pipelines.
 
 It's the easiest way to transform any Python function into a unit of work that can be observed and orchestrated. Just bring your Python code, sprinkle in a few decorators, and go!
 
