--- a/docs/3.0rc/get-started/index.mdx
+++ b/docs/3.0rc/get-started/index.mdx
@@ -25,10 +25,14 @@ Get up and running quickly with the [quickstart guide](/3.0rc/get-started/quicks
 
 Take your understanding even further with Prefect's [API reference](/3.0rc/api-ref/).
 
-Join Prefect's [vibrant community](/contribute/index/) of over 26,000 engineers to learn with others and share your knowledge!
+## Community
+
+Join Prefect's vibrant community of over [26,000 engineers](/contribute/index/) to learn with others and share your knowledge!
+
+## Connect with us
 
 <Tip>
 **Need help?**
 
-Get your questions answered by a Prefect Product Advocate! [Book a meeting](https://calendly.com/prefect-experts/prefect-product-advocates?utm_campaign=prefect_docs_cloud&utm_content=prefect_docs&utm_medium=docs&utm_source=docs)
+Meet with a Prefect Product Advocate and get your questions answered! [Book a meeting](https://calendly.com/prefect-experts/prefect-product-advocates?utm_campaign=prefect_docs_cloud&utm_content=prefect_docs&utm_medium=docs&utm_source=docs)
 </Tip>
