Remove the remaining old content, add placeholders for 'Get started' and 'Start building' sections

--- a/docs/3.0rc/get-started/index.mdx
+++ b/docs/3.0rc/get-started/index.mdx
@@ -4,26 +4,15 @@ description: Prefect is a workflow orchestration tool that empowers developers t
 mode: wide
 ---
 
-It's the easiest way to transform any Python function into a unit of work that can be observed and orchestrated. Just bring your Python code, sprinkle in a few decorators, and go!
+TBD
 
-With Prefect you gain:
+## Get started
 
-* [Scheduling](/3.0rc/automate/add-schedules)
-* [Retries](/3.0rc/develop/write-tasks#task-arguments)
-* [Logging](/3.0rc/develop/logging/) 
-* [Convenient async functionality](/3.0rc/develop/task-runners/#task-runners)
-* [Caching](/3.0rc/develop/write-tasks#caching)
-* [Notifications](/3.0rc/automate/events/automations-triggers/)
-* [Observability](/3.0rc/develop/runtime-context/)
-* [Event-based orchestration](/3.0rc/automate/events/webhook-triggers)
+TBD
 
-![screenshot of Prefect Cloud dashboard](/3.0rc/img/ui/cloud-dashboard.png)
+## Start building
 
-## New to Prefect?
-
-Get up and running quickly with the [quickstart guide](/3.0rc/get-started/quickstart/).
-
-Take your understanding even further with Prefect's [API reference](/3.0rc/api-ref/).
+TBD
 
 ## Community
 
