Add content for the 'Get started' and 'Start building' sections

--- a/docs/3.0rc/get-started/index.mdx
+++ b/docs/3.0rc/get-started/index.mdx
@@ -8,11 +8,31 @@ TBD
 
 ## Get started
 
-TBD
+<CardGroup cols={3}>
+  <Card title="Quickstart" icon="play" href="/3.0rc/get-started/quickstart">
+    Learn how to quickly schedule your code on remote infrastructure and observe the state of your workflows.
+  </Card>
+  <Card title="Prefect Cloud" icon="cloud">
+    Use our hosted workflow application framework that provides all the capabilities of Prefect server plus additional features.
+  </Card>
+  <Card title="Upgrade to Prefect 3" icon="sparkles">
+    Learn how to migrate from Prefect 2 to Prefect 3 to get the latest features and performance enhancements.
+  </Card>
+</CardGroup>
 
 ## Start building
 
-TBD
+<CardGroup cols={3}>
+  <Card title="Develop" icon="code">
+    Write and observe workflows, create tasks, and build interactive workflows.
+  </Card>
+  <Card title="Deploy" icon="rocket">
+    Serve workflows, schedule work on serverless infrastructure, and bridge the Prefect orchestration environment with your execution environment.
+  </Card>
+  <Card title="React" icon="eyes">
+    Learn how to react to your workflows with events, automations, and webhooks.
+  </Card>
+</CardGroup>
 
 ## Community
 
