--- a/docs/3.0rc/resources/upgrade-prefect-3.mdx
+++ b/docs/3.0rc/resources/upgrade-prefect-3.mdx
@@ -49,7 +49,7 @@ Updating your workflows to bring them in line with these principles requires cod
 	    my_flow()
     ```
   </Card>
-  <Card title="Prefect 3" icon="square-2">
+  <Card title="Prefect 3">
     ```python
     @task
     async def my_task():
@@ -87,7 +87,7 @@ So, *you do not need to await futures from submitted tasks*:
 	    return future
     ```
   </Card>
-  <Card title="Prefect 3" icon="square-2">
+  <Card title="Prefect 3">
     ```python
     @task
     async def my_task():
@@ -126,7 +126,7 @@ So, *you must wait for the future to complete, then retrieve the state separatel
 	    return state
     ```
   </Card>
-  <Card title="Prefect 3" icon="square-2">
+  <Card title="Prefect 3">
     ```python
     @task
     async def my_task():
@@ -164,7 +164,7 @@ In Prefect 3, `PrefectFutures` resulting from submitted task runs are not automa
 	    [my_task.submit() for i in range(10)]
     ```
   </Card>
-  <Card title="Prefect 3" icon="square-2">
+  <Card title="Prefect 3">
     ```python
     from prefect import flow, task
 
@@ -188,14 +188,14 @@ The one exception to this case is that `PrefectFuture`s returned from a flow wil
 
 ## Notifications are now Automations
 
-The notifications feature in Prefect 2 has been vastly expanded to enable all kinds of “if this, then that” logic that can be defined and executed by a Prefect server instance. 
-See the [Automations documentation](https://docs-3.prefect.io/3.0rc/automate/events/automations-triggers) for more information.
+The notifications feature in Prefect 2 has been vastly expanded to enable all kinds of “if this, then that” logic that can be defined and executed by a Prefect server instance or Prefect Cloud
+See the [Automations documentation](/3.0rc/automate/events/automations-triggers) for more information.
 
 ## Integrations must be upgraded
 
 Prefect 2 integrations cannot be used with Prefect 3 and vice versa. 
 You must update all of your integrations packages in conjunction with upgrading from Prefect 2 to Prefect 3. 
-The easiest way to keep your integrations in sync is to use the extras on the `prefect` package to ensure that you get the correct version (e.g. `pip install prefect[aws]`).
+We reccomend using the extras on the `prefect` package to ensure that you install the version (e.g. `pip install prefect[aws]`) of the integration that corresponds to your Prefect version.
 
 ## Data validation via Pydantic v2
 
