--- a/docs/3.0rc/resources/upgrade-prefect-3.mdx
+++ b/docs/3.0rc/resources/upgrade-prefect-3.mdx
@@ -184,7 +184,7 @@ The one exception to this case is that `PrefectFuture`s returned from a flow wil
 
 ## Notifications are now Automations
 
-The notifications feature in Prefect 2 has been vastly expanded to enable all kinds of “if this, then that” logic that can be defined and executed by a Prefect server instance or Prefect Cloud
+The notifications feature in Prefect 2 has been vastly expanded to enable all kinds of “if this, then that” logic that can be defined and executed by a Prefect server instance or Prefect Cloud.
 See the [Automations documentation](/3.0rc/automate/events/automations-triggers) for more information.
 
 ## Integrations must be upgraded
