--- a/docs/3.0rc/resources/upgrade-prefect-3.mdx
+++ b/docs/3.0rc/resources/upgrade-prefect-3.mdx
@@ -8,7 +8,8 @@ This guide covers changes that you may need to make to ensure your flows keep fl
 
 ## Module locations and names
 
-Some modules have been renamed, reorganized, or removed for clarity. If you use a module that has changed, it will continue to work, but it will raise deprecation warnings. You will need to update these modules before the six month deprecation period ends:
+Some modules have been renamed, reorganized, or removed for clarity. If you use a module that has changed, it will continue to work, but it will raise deprecation warnings. 
+You will need to update these modules before the six month deprecation period ends:
 
 | Prefect 2 | Prefect 3 | Notes                                 |
 | --------- | --------- | ------------------------------------- |
