--- a/docs/3.0rc/resources/upgrade-prefect-3.mdx
+++ b/docs/3.0rc/resources/upgrade-prefect-3.mdx
@@ -198,7 +198,7 @@ We reccomend using the extras on the `prefect` package to ensure that you instal
 
 Prefect 2 uses Pydantic v1 to validate data, particularly for blocks and work pools. 
 Prefect 3 has been upgraded to Pydantic v2. This upgrade does not require changes for any built-in Prefect interfaces or supporting integrations. 
-However, if you have registered custom blocks with a self-hosted Prefect Server, type enforcement for those block schemas will need to be upgraded to Pydantic v2 to work with Prefect 3. 
+However, if you have registered custom blocks with a self-hosted Prefect Server, type enforcement for those block schemas must be upgraded to Pydantic v2 to work with Prefect 3. 
 See the the [Pydantic migration guide](https://www.notion.so/Prefect-2-3-Upgrade-Guide-e43313731c1d4adbb4e4175548058b51?pvs=21) for more information.
 
 ## Workers have replaced Agents
