--- a/docs/3.0rc/resources/upgrade-prefect-3.mdx
+++ b/docs/3.0rc/resources/upgrade-prefect-3.mdx
@@ -182,6 +182,22 @@ In Prefect 3, `PrefectFutures` resulting from submitted task runs are not automa
 If you do not wait for the futures, the tasks may fail with a 'Flow must be running to start a task' error. 
 The one exception to this case is that `PrefectFuture`s returned from a flow will resolve to states before completing the flow.
 
+## Result persistence and caching behavior
+
+Prefect 3 supports transactional semantics - tasks runs can be grouped into larger transactions, enabling more resilient, idempotent workflows. 
+To support this, Prefect 3 has more eager, intelligent caching defaults than Prefect 2.
+
+Whenever a task runs, Prefect 3 first computes its cache key, then uses that cache key to evaluate whether that same task has run with the same inputs and as part of the same flow before. 
+If it has, the cached result from the previous run is used.
+If it hasn't, the task runs. 
+This behavior can be configured through the new global `cache_policy` setting, or through the `cache_key_fn` on the task, just as in Prefect 2.
+
+Results and cache keys are not stored with your Prefect Cloud account or Prefect server instance. 
+They are persisted entirely in your local result location. 
+Result persistence, and the caching behavior it enables, can be disabled through the `persist_result=False` flag.
+
+See the [caching documentation](/3.0rc/develop/write-tasks#caching) for more information.
+
 ## Notifications are now Automations
 
 The notifications feature in Prefect 2 has been expanded to enable many kinds of “if this, then that” logic that can be defined and executed by a Prefect server instance or Prefect Cloud.
