--- a/docs/2.19.x/concepts/flows.mdx
+++ b/docs/2.19.x/concepts/flows.mdx
@@ -1110,7 +1110,7 @@ resume_flow_run(FLOW_RUN_ID)
 ```
 
 <Note>
-**Nested flows can't be suspended independently of their parent run**
+**Nested flow runs can't be suspended independently of their parent flow run**
 
 You can't suspend a nested flow run independently of its parent flow run.
 
