--- a/docs/3.0rc/develop/manage-states.mdx
+++ b/docs/3.0rc/develop/manage-states.mdx
@@ -126,7 +126,7 @@ def nested flow():
 
 @flow 
 def my_flow():
-    state = nested flow(return_state=True) # return State
+    state = nested_flow(return_state=True) # return State
     result = state.result() # return int
 ```
 
