--- a/docs/2.19.x/concepts/flows.mdx
+++ b/docs/2.19.x/concepts/flows.mdx
@@ -394,7 +394,7 @@ if __name__ == "__main__":
 ```
 
 
-You can also define flows or tasks in separate modules and import them for usage. For example, here's a simple nested flow module:
+You can also define flows or tasks in separate modules and import them for usage:
 
 ```python
 from prefect import flow, task
