--- a/docs/3.0rc/develop/manage-states.mdx
+++ b/docs/3.0rc/develop/manage-states.mdx
@@ -90,7 +90,7 @@ The same rule applies for a nested flow:
 
 ```python hl_lines="1-3"
 @flow 
-def nested flow():
+def nested_flow():
     return 42 
 
 @flow 
