--- a/docs/3.0rc/develop/manage-states.mdx
+++ b/docs/3.0rc/develop/manage-states.mdx
@@ -95,7 +95,7 @@ def nested_flow():
 
 @flow 
 def my_flow():
-    result = nested flow() # return data
+    result = nested_flow() # return data
 ```
 
 ### Return Prefect State
