--- a/docs/3.0rc/resources/upgrade-prefect-3.mdx
+++ b/docs/3.0rc/resources/upgrade-prefect-3.mdx
@@ -209,7 +209,7 @@ Integrations compatible with Prefect 2 generally cannot be used with Prefect 3 a
 You must update all of your integrations packages in conjunction with upgrading from Prefect 2 to Prefect 3. 
 We reccomend using the extras on the `prefect` package to ensure that you install the version (e.g. `pip install prefect[aws]`) of the integration that corresponds to your Prefect version.
 
-## Data validation via Pydantic v2
+## Data validation via Pydantic V2
 
 Prefect 2 uses Pydantic v1 to validate data, particularly for blocks and work pools. 
 Prefect 3 has been upgraded to Pydantic v2. This upgrade does not require changes for any built-in Prefect interfaces or supporting integrations. 
