--- a/docs/3.0rc/resources/upgrade-prefect-3.mdx
+++ b/docs/3.0rc/resources/upgrade-prefect-3.mdx
@@ -28,7 +28,8 @@ In Prefect 3, all workflow code, including task functions, runs on the main thre
 
 To execute tasks asynchronously in separate threads, you must either write asynchronous Python functions or use the `Task.submit` method. 
 Prefect 3 encourages conventional asynchronous Python programing principles. 
-Updating your workflows to bring them in line with these principles requires code changes. Here are some examples:
+Updating your workflows to bring them in line with these principles requires code changes. 
+Here are some examples:
 
 **Synchronous tasks and flows cannot be called from asynchronous tasks or flows as they could in Prefect 2.**
 
