--- a/docs/3.0rc/develop/logging.mdx
+++ b/docs/3.0rc/develop/logging.mdx
@@ -201,7 +201,7 @@ not logging print statements in this task
 ```
 </div>
 
-Configure this behavior globally for all Prefect flows, tasks, and nested flows.
+Configure this behavior globally for all Prefect flow and task runs
 
 <div class='terminal'>
 ```bash
