--- a/docs/3.0rc/deploy/serve-flows/deploy-a-flow.mdx
+++ b/docs/3.0rc/deploy/serve-flows/deploy-a-flow.mdx
@@ -325,7 +325,7 @@ from prefect.deployments import run_deployment
 
 @flow
 def my_flow():
-    # The scheduled flow run will not be linked to this flow as a nested flow.
+    # This flow run will not be linked to `my_flow` run as a child 
     run_deployment(name="my_other_flow/my_deployment_name", as_subflow=False)
 ```
 
