--- a/docs/3.0rc/resources/upgrade-prefect-3.mdx
+++ b/docs/3.0rc/resources/upgrade-prefect-3.mdx
@@ -173,7 +173,7 @@ In Prefect 3, `PrefectFutures` resulting from submitted task runs are not automa
 	
     @flow
     def my_flow():
-	futures = [my_task.submit() for i in range(10)]
+	futures = my_task.map([1, 2, 3, 4])
 	# You must wait for futures before exiting flow.
 	futures.wait()
     ```
