--- a/docs/3.0rc/api-ref/rest-api/index.mdx
+++ b/docs/3.0rc/api-ref/rest-api/index.mdx
@@ -3,7 +3,7 @@ title: Cloud API Overview
 description: Prefect REST API for interacting with the orchestration engine and Prefect Cloud.
 ---
 
-The Prefect API is organized around REST. It is used for communicating data from clients to a Prefect server so that orchestration can be performed. This API is consumed by clients such as the Prefect Python SDK or the server dashboard.
+The Prefect API is organized around REST. It is used for communicating data from clients to a self-hosted Prefect server instance so that orchestration can be performed. This API is consumed by clients such as the Prefect Python SDK or the server dashboard.
 
 Prefect Cloud and a locally hosted Prefect server each provide a REST API.
 
